--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "author": "zsh2401@163.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.2",
-    "typescript": "^4.2.2"
+    "@types/react": "^18.0.28",
+    "react": "^18.2.0",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "build": "tsc",
     "release": "npm version patch && npm run build && npm publish"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   }
 }
