--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "sz-react-support",
-  "version": "1.2.3",
+  "version": "2.0.0",
   "description": "Seymour Zhang's React Supporting Library",
   "main": "dist/index.js",
   "author": "zsh2401@163.com",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.0.28",
+    "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
     "typescript": "^4.9.5"
   },
@@ -18,6 +19,8 @@
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "localforage": "^1.10.0"
+    "levent": "^0.3.8",
+    "localforage": "^1.10.0",
+    "uuid": "^9.0.0"
   }
 }
