--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "zsh2401@163.com",
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.2.8",
     "@types/uuid": "^9.0.1",
     "react": "^18.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "build": "tsc",
-    "release": "npm version patch && npm run build && npm publish"
+    "release": "npm run build  && npm version patch && npm publish"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
