--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "2.0.2",
   "description": "Seymour Zhang's React Supporting Library",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "module": "es/index.js",
   "author": "zsh2401@163.com",
   "license": "MIT",
   "devDependencies": {
